--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,11 @@ body {
     background-color: #f5f6f7;
     font-family: sans-serif;
 }
+.header {
+    text-align: center;
+    text-transform: uppercase;
+    background-color: #0a0a23;
+    padding: 32px;
+    color:#fff;
+    border-bottom: 4px solid #fdb347;
+}
