--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
     width: 100%;
     max-width: 350px;
     height: 300px;
+    object-fit: cover;
+    border-radius: 10px;
 }
 body {
     margin: 0;
@@ -18,4 +20,19 @@ body {
     padding: 32px;
     color:#fff;
     border-bottom: 4px solid #fdb347;
+}
+.gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 10px;
+    max-width: 1400px;
+    margin: 0 auto;
+    gap: 16px;
+}
+.gallery::after {
+    content:"";
+    width: 350px;
 }
